--- a/src/app/pages/basic-page/basic-page.component.html
+++ b/src/app/pages/basic-page/basic-page.component.html
@@ -1,24 +1,24 @@
-<section class="mx-5">
-  <h1 class="text-2xl font-bold">Pipes Básicos</h1>
-  <h3 class="text-xl font-thin">Pipes incluidos en Angular</h3>
-
-</section>
+<component-title-pipe title="Pipes Básicos" subTitle="Pipes incluidos en Angular" />
 <div class="stats shadow w-full">
   <div class="stat place-items-center">
     <div class="stat-title">Lowercase Pipe</div>
-    <div class="stat-value"> {{nameUpper() | lowercase}} </div>
-    <div class="stat-desc"> {{nameUpper()}} </div>
+    <div class="stat-value">{{ nameUpper() | lowercase }}</div>
+    <div class="stat-desc">{{ nameUpper() }}</div>
   </div>
 
   <div class="stat place-items-center">
     <div class="stat-title">UpperCase Pipe</div>
-    <div class="stat-value text-secondary"> {{nameLower() | uppercase}}</div>
-    <div class="stat-desc text-secondary"> {{ nameLower() }} </div>
+    <div class="stat-value text-secondary">{{ nameLower() | uppercase }}</div>
+    <div class="stat-desc text-secondary">{{ nameLower() }}</div>
   </div>
 
   <div class="stat place-items-center">
     <div class="stat-title">TitleCase Pipe</div>
-    <div class="stat-value"> {{ fullName() | titlecase}}<div>
-    <div class="stat-desc"> {{fullName()}} </div>
+    <div class="stat-value">
+      {{ fullName() | titlecase }}
+      <div>
+        <div class="stat-desc">{{ fullName() }}</div>
+      </div>
+    </div>
   </div>
 </div>
