--- a/src/app/pages/basic-page/basic-page.component.html
+++ b/src/app/pages/basic-page/basic-page.component.html
@@ -50,13 +50,15 @@
 <div class="stats text-center shadow w-full">
   <div class="stat">
     <div class="stat-title">Date Pipe</div>
-    <div class="stat-value">{{ customDate() | date:"dd/mm/yyyy" }}</div>
+    <div class="stat-value">{{ customDate() | date : "dd/mm/yyyy" }}</div>
     <div class="stat-desc">Jan 1st - Feb 1st</div>
   </div>
 
   <div class="stat">
     <div class="stat-title">Date | long| GMT-5</div>
-    <div class="stat-value">{{ customDate() | date : "HH:mm:ss" : "GMT-5" }}</div>
+    <div class="stat-value">
+      {{ customDate() | date : "HH:mm:ss" : "GMT-5" }}
+    </div>
     <div class="stat-desc">Jan 1st - Feb 1st</div>
   </div>
 
@@ -65,4 +67,16 @@
     <div class="stat-value">{{ customDate() | date : "EEE d, MMMM" }}</div>
     <div class="stat-desc">Jan 1st - Feb 1st</div>
   </div>
+</div>
+<div class="divider">
+
+</div>
+
+<div class="flex flex-row gap-2">
+  <h1 class="text-2xl font-bold">
+    Locale Actual: <span class="badge badge-secondary">ES</span>
+  </h1>
+  <button class="btn btn-primary">Changer en français</button>
+  <button class="btn btn-primary">Change to English</button>
+  <button class="btn btn-primary">Cambiar a Español</button>
 </div>
