Agregar componente Card y mejorar la presentación en UncommonPage

--- a/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,10 @@
-<p>uncommon-page works!</p>,
+<component-title-pipe
+  title="Pipes no tan comunes"
+  subTitle="Pipes incluidos en Angular"
+/>
+<div class="mt-5 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
+  <component-card title="i18nSelectPipe">
+    <p>Hola Mundo desde el padre</p>
+    <button class="btn btn-primary">Click me!</button>
+  </component-card>
+</div>
