--- a/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -4,7 +4,7 @@
 />
 <div class="mt-5 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
   <component-card title="i18nSelectPipe">
-    <p>Hola Mundo desde el padre</p>
-    <button class="btn btn-primary">Click me!</button>
+    <p>Saludos {{cliente().name}}, es un placer {{cliente().gender | i18nSelect:invitationMap }} a nuestro evento.</p>
+    <button class="btn btn-primary" (click)="changeClient()" >Cambiar cliente</button>
   </component-card>
 </div>
