Agregar soporte para JsonPipe en UncommonPage y mejorar la presentación de datos

--- a/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -38,4 +38,11 @@
     <b class="mt-2">Slice:0:-3</b>
     <p class="text-primary"> {{clientes() | slice:0:-3 }}</p>
   </component-card>
+
+  <component-card title="JsonPipe">
+    <pre class="text-primary">{{ clientes() | json }}</pre>
+    <pre class="text-primary">{{ cliente() | json }}</pre>
+    <pre class="text-primary">{{ clientes().join(', ')| json }}</pre>
+
+  </component-card>
 </div>
