--- a/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -28,21 +28,48 @@
     <b>Original</b>
     <p class="text-primary">{{ clientes().join(", ") }}</p>
     <b class="mt-2">Slice:0:2</b>
-    <p class="text-primary"> {{clientes() | slice:0:2 }}</p>
+    <p class="text-primary">{{ clientes() | slice : 0 : 2 }}</p>
     <b class="mt-2">Slice:1:2</b>
-    <p class="text-primary"> {{clientes() | slice:1:2 }}</p>
+    <p class="text-primary">{{ clientes() | slice : 1 : 2 }}</p>
     <b class="mt-2">Slice:1:3</b>
-    <p class="text-primary"> {{clientes() | slice:1:3 }}</p>
+    <p class="text-primary">{{ clientes() | slice : 1 : 3 }}</p>
     <b class="mt-2">Slice:3:4</b>
-    <p class="text-primary"> {{clientes() | slice:3:4 }}</p>
+    <p class="text-primary">{{ clientes() | slice : 3 : 4 }}</p>
     <b class="mt-2">Slice:0:-3</b>
-    <p class="text-primary"> {{clientes() | slice:0:-3 }}</p>
+    <p class="text-primary">{{ clientes() | slice : 0 : -3 }}</p>
   </component-card>
 
   <component-card title="JsonPipe">
     <pre class="text-primary">{{ clientes() | json }}</pre>
     <pre class="text-primary">{{ cliente() | json }}</pre>
-    <pre class="text-primary">{{ clientes().join(', ')| json }}</pre>
-
+    <pre class="text-primary">{{ clientes().join(", ") | json }}</pre>
   </component-card>
+
+  <component-card title="KeyValuePipe">
+    <!-- <pre class="text-primary">{{ profile | keyvalue | json }}</pre> -->
+    <ul>
+      @for (item of profile | keyvalue; track $index) {
+      <li>
+        <span class="text-primary">{{ item.key }}</span> :
+        <span >{{ item.value }}</span>
+      </li>
+      }
+    </ul>
+  </component-card>
+
+  <component-card title="AsyncPipe">
+    @if(promiseValue | async) {
+      <p class="text-primary">
+        {{ promiseValue | async  }}
+      </p>
+    }
+  </component-card>
+  <component-card title="AsyncPipe Observable">
+    @if(promiseValue | async) {
+      <p class="text-primary">
+        {{ myObsservableInterval | async  }}
+      </p>
+    }
+  </component-card>
+
 </div>
