Agregar componente TitlePipe y mejorar la presentación en custom-page

--- a/src/app/pages/custom-page/custom-page.component.html
+++ b/src/app/pages/custom-page/custom-page.component.html
@@ -1,1 +1,8 @@
-<p>custom-page works!</p>,
+<component-title-pipe title="Pipes personalizados"  subTitle="Pipes no incluido en Angular"/>
+<div class="stats shadow">
+  <div class="stat">
+    <div class="stat-title">Total Page Views</div>
+    <div class="stat-value">89,400</div>
+    <div class="stat-desc">21% more than last month</div>
+  </div>
+</div>
