--- a/src/app/pages/custom-page/custom-page.component.html
+++ b/src/app/pages/custom-page/custom-page.component.html
@@ -1,8 +1,62 @@
-<component-title-pipe title="Pipes personalizados"  subTitle="Pipes no incluido en Angular"/>
+<component-title-pipe
+  title="Pipes personalizados"
+  subTitle="Pipes no incluido en Angular"
+/>
 <div class="stats shadow">
   <div class="stat">
-    <div class="stat-title">Total Page Views</div>
-    <div class="stat-value">89,400</div>
-    <div class="stat-desc">21% more than last month</div>
+    <div class="stat-title">Toggle case Pipe</div>
+    <div class="stat-value">{{ name() | toggleCase : toggle() }}</div>
+    <div class="stat-desc">{{ name() }}</div>
+    <button class="btn btn-primary" (click)="changeToggle()">
+      Toogle Case
+    </button>
   </div>
+</div>
+<div class="divider"></div>
+<section class="my-2">
+  <h1 class="text-2xl font-bold">Pipes personalizados en acción</h1>
+
+  <div class="flex gap-2 justify-end w-full">
+    <button class="btn btn-primary">Por nombre</button>
+    <button class="btn btn-accent">Por volar</button>
+    <button class="btn btn-secondary">Por color</button>
+    <button class="btn btn-info">Por creador</button>
+  </div>
+</section>
+<div class="overflow-x-auto w-full">
+  <table class="table table-xs w-full">
+    <!-- head -->
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Puede volar</th>
+        <th>Color</th>
+        <th>Creador</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- row 1 -->
+      @for (hero of heroes(); track hero.id; let i = $index) {
+      <tr class="hover:bg-base-200 hover:cursor-pointer">
+        <th>{{ i + 1 }}</th>
+        <td>{{ hero.name }}</td>
+        <td>
+          <span
+            class="text-xs w-44"
+            [class.text-success]="hero.canFly"
+            [class.text-accent]="!hero.canFly"
+            >{{ hero.canFly | canFly }}</span
+          >
+        </td>
+        <td>
+          <span class="text-xs w-44" [style.color]="hero.color | heroColor">{{
+            hero.color | heroColor
+          }}</span>
+        </td>
+        <td>{{ hero.creator }}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
 </div>
