--- a/src/app/pages/custom-page/custom-page.component.html
+++ b/src/app/pages/custom-page/custom-page.component.html
@@ -7,20 +7,30 @@
     <div class="stat-title">Toggle case Pipe</div>
     <div class="stat-value">{{ name() | toggleCase : toggle() }}</div>
     <div class="stat-desc">{{ name() }}</div>
-    <button class="btn btn-primary" (click)="changeToggle()">
+    <button class="btn btn-primary" (click)="this.toggle.set(!this.toggle())">
       Toogle Case
     </button>
   </div>
 </div>
 <div class="divider"></div>
 <section class="my-2">
-  <h1 class="text-2xl font-bold">Pipes personalizados en acción</h1>
+  <h1 class="text-2xl font-bold">
+    Filtrando por: {{ 'xxxx' }} ordenando por: {{ sortBy() }}
+  </h1>
 
   <div class="flex gap-2 justify-end w-full">
-    <button class="btn btn-primary">Por nombre</button>
-    <button class="btn btn-accent">Por volar</button>
-    <button class="btn btn-secondary">Por color</button>
-    <button class="btn btn-info">Por creador</button>
+    <button (click)="sortBy.set('name')" class="btn btn-primary">
+      Por nombre
+    </button>
+    <button (click)="sortBy.set('canFly')" class="btn btn-accent">
+      Por volar
+    </button>
+    <button (click)="sortBy.set('color')" class="btn btn-secondary">
+      Por color
+    </button>
+    <button (click)="sortBy.set('creator')" class="btn btn-info">
+      Por creador
+    </button>
   </div>
 </section>
 <div class="overflow-x-auto w-full">
@@ -37,7 +47,8 @@
     </thead>
     <tbody>
       <!-- row 1 -->
-      @for (hero of heroes(); track hero.id; let i = $index) {
+      @for (hero of heroes() | heroSortBY:sortBy(); track hero.id; let i =
+      $index) {
       <tr class="hover:bg-base-200 hover:cursor-pointer">
         <th>{{ i + 1 }}</th>
         <td>{{ hero.name }}</td>
@@ -50,9 +61,11 @@
           >
         </td>
         <td>
-          <span class="text-xs w-44" [style.color]="hero.color | heroTextColor ">{{
-            hero.color | heroColor | titlecase
-          }}</span>
+          <span
+            class="text-xs w-44"
+            [style.color]="hero.color | heroTextColor"
+            >{{ hero.color | heroColor | titlecase }}</span
+          >
         </td>
         <td>{{ hero.creator | heroCreator }}</td>
       </tr>
