--- a/src/app/pages/custom-page/custom-page.component.html
+++ b/src/app/pages/custom-page/custom-page.component.html
@@ -15,10 +15,13 @@
 <div class="divider"></div>
 <section class="my-2">
   <h1 class="text-2xl font-bold">
-    Filtrando por: {{ 'xxxx' }} ordenando por: {{ sortBy() }}
+    Filtrando por: {{ filterBy() }} ordenando por: {{ sortBy() }}
   </h1>
 
-  <div class="flex gap-2 justify-end w-full">
+  <div class="flex gap-2 justify-end w-full mt-2">
+
+    <input class="input input-bordered w-full max-w-xs" type="text" placeholder="Buscar hero" #find (input)="filterBy.set(find.value)"/>
+    <div class="flex flex-1"></div>
     <button (click)="sortBy.set('name')" class="btn btn-primary">
       Por nombre
     </button>
@@ -47,7 +50,7 @@
     </thead>
     <tbody>
       <!-- row 1 -->
-      @for (hero of heroes() | heroSortBY:sortBy(); track hero.id; let i =
+      @for (hero of heroes() | heroFilter:filterBy() | heroSortBY:sortBy() ; track hero.id; let i =
       $index) {
       <tr class="hover:bg-base-200 hover:cursor-pointer">
         <th>{{ i + 1 }}</th>
